--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <div class="myname">
-    <img src="images/signature (7).png" alt="Myname">
-    <img src="images/signature (6).png" alt="Myname">
+    <img src="signature (7).png" alt="Myname">
+    <img src="signature (6).png" alt="Myname">
     </div>
   <div class="image">
     <img src="https://us.123rf.com/450wm/remains/remains1501/remains150100023/35639738-young-woman-in-headphones-listening-music-and-enjoying-beautiful-sunset-.jpg?ver=6" alt="image">
