--- a/odia.html
+++ b/odia.html
@@ -18,16 +18,16 @@
   <h1 id="title">Odia songs</h1>
   <div class="set">
 
-    <button class="burj drum">B</button>
+    <button class="tumoakhira drum">tumoakhira</button>
 
-    <button class="cmyn drum">C</button>
-    <button class="ekdin drum">E</button>
-    <button class="haledil drum">H</button>
-    <button class="butterfly drum">J</button>
-    <button class="kabhi drum">K</button>
-    <button class="laapata drum">L</button>
-    <button class="tumhiho drum">T</button>
-    <button class="wajah drum">W</button>
+    <button class="janamadeinusina drum">janamadeinusina</button>
+    <button class="kulanandana drum">kulanandana</button>
+    <button class="maasinagae drum">maasinagae</button>
+    <button class="moakhiretupalaka drum">moakhiretupalaka</button>
+    <button class="chatichirideletu drum">chatichirideletu</button>
+    <button class="tuthile drum">tuthile</button>
+    <button class="sunapanjuri drum">sunapanjuri</button>
+    <button class="balika drum">balika</button>
   </div>
 <div class="rightside">
   <img src="https://images.macrumors.com/t/MKlRm9rIBpfcGnjTpf6ZxgpFTUg=/1600x1200/smart/article-new/2018/05/apple-music-note.jpg" alt="gif">
